--- a/index.html
+++ b/index.html
@@ -10,22 +10,23 @@
 <link rel="stylesheet" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 </head>
 
 <body>
 
     <div class="card">
-<h1> Hello! Nice to meet you. </h1>
+<h1> Hello! Nice to meet you. <br> My name is Jan Wouter. </h1>
 </div>
 
 <div class="card">
     <h2>This is a bad picture of myself</h2>
     <img src="images/Profielfoto.jpg" id="profilepic">
         <div>
-            <a href="https://www.linkedin.com/in/janwoutervandalen/" target="_blank" class="button-pretty" id="link">My LinkedIn page</a>
+            <a href="https://www.linkedin.com/in/janwoutervandalen/" target="_blank" class="button-pretty"><i class="fab fa-linkedin-in"></i> My LinkedIn page</a>
         </div>
         <div>
-            <a href="https://github.com/janwouter89" target="_blank" class="button-pretty" id="link">My Github page</a>
+            <a href="https://github.com/janwouter89" target="_blank" class="button-pretty"><i class="fab fa-github"></i> My Github page</a>
         </div>
 </div>
 
